Fixed bug in product tile on mobile view

--- a/src/components/ProductTile/ProductTile.module.css
+++ b/src/components/ProductTile/ProductTile.module.css
@@ -144,7 +144,7 @@
 @media (max-width: 567px) {
     .productTile,
     .productTileDark {
-        height: 400px;
+        height: 384px;
     }
     .favoriteLight > svg,
     .favoriteDark > svg {
